distortion fix v.3

--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -2,7 +2,7 @@
 .angelo-pic{
     max-height: 350px;
     height: auto;
-    max-width: 100%
+    max-width: 100%;
     width:auto;
 }
 
